--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,1 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-title: runphp的笔记
-email: runphp@qq.com
-description: > # this means to ignore newlines until "baseurl:"
-  不积跬步无以至千里，不积小流无以成江海，学习工作生活中的点滴记录。
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://blog.runphp.net" # the base hostname & protocol for your site
-github_username: runphp
-permalink: /:categories/:year-:month-:day-:title.html
-paginate: 10
-# Build settings
-markdown: kramdown
-kramdown:
-  input:          GFM
-gems:
-  - jekyll-paginate
-  - jekyll-gist
+theme: jekyll-theme-cayman
